# t

./: Cargo.toml
.github/workflows/: cd.yaml  ci.yaml
crates/t/: Cargo.toml
crates/t-cli/: Cargo.toml
crates/t/src/: db.rs  lib.rs  main.rs  task.rs  task_list.rs
src/: db.rs  lib.rs  main.rs  status.rs  task.rs  task_db.rs  task_list.rs
