[package]
name = "t-cli"
version = "0.2.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
etcetera = "0.1"
serde_json = "1"
structopt = "0.3"
t = { path = "../t" }
