[package]
name = "t"
version = "0.1.0"
authors = ["Aramis Razzaghipour <aramisnoah@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
indexmap = { version = "1", features = ["serde-1"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
